--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pomodoro Technique</title>
-  <link rel="stylesheet" href="style.css"> <!-- 引入 CSS 樣式表 -->
+  <title>番茄鐘</title>
+  <link rel="stylesheet" href="style.css"> <!-- 引入外部 CSS 樣式表 -->
 </head>
 
 <body>
   <div class="container">
     <h1>番茄鐘</h1>
     <div class="timer">
-      <span class="time">25:00</span>
+      <span id="time-display">25:00</span>
     </div>
-    <div class="buttons">
+    <div class="controls">
       <button id="start-btn">開始</button>
       <button id="pause-btn">暫停</button>
       <button id="reset-btn">重設</button>
     </div>
     <div class="cycles">
-      已完成 <span id="cycle-count">0</span> 個番茄週期
+      <p>完成週期: <span id="cycle-count">0</span></p>
     </div>
   </div>
-  <script src="app.js"></script> <!-- 引入 JavaScript 檔案 -->
+  <script src="app.js"></script> <!-- 引入外部 JavaScript 檔案 -->
 </body>
 
 </html>
