"Add a to-do list section to the HTML structure"

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <div class="cycles">
       <p>完成週期: <span id="cycle-count">0</span></p>
     </div>
+    <div class="todo-section">
+      <h2>待辦事項</h2>
+      <div class="todo-input">
+        <input type="text" id="todo-input" placeholder="輸入待辦事項...">
+        <button id="add-todo">新增</button>
+      </div>
+      <ul id="todo-list"></ul>
+    </div>
   </div>
   <script src="app.js"></script> <!-- 引入外部 JavaScript 檔案 -->
 </body>
