--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>番茄鐘</title>
   <link rel="stylesheet" href="style.css"> <!-- 引入外部 CSS 樣式表 -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -29,6 +30,30 @@
         <button id="add-todo">新增</button>
       </div>
       <ul id="todo-list"></ul>
+    </div>
+    <div class="stats-section">
+      <h2>統計分析</h2>
+      <div class="stats-controls">
+        <button id="daily-stats">每日統計</button>
+        <button id="weekly-stats">每週統計</button>
+      </div>
+      <div class="stats-display">
+        <canvas id="statsChart"></canvas>
+      </div>
+      <div class="stats-summary">
+        <div class="stat-item">
+          <h3>今日完成週期</h3>
+          <span id="today-cycles">0</span>
+        </div>
+        <div class="stat-item">
+          <h3>本週完成週期</h3>
+          <span id="week-cycles">0</span>
+        </div>
+        <div class="stat-item">
+          <h3>最長專注時間</h3>
+          <span id="max-focus-time">0 分鐘</span>
+        </div>
+      </div>
     </div>
   </div>
   <script src="app.js"></script> <!-- 引入外部 JavaScript 檔案 -->
