"Add a feature for a 15-minute break after completing 4 Pomodoro cycles."

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1>番茄鐘</h1>
     <div class="timer">
       <span id="time-display">25:00</span>
+      <div class="sessions-info">
+        <span id="sessions-count">距離長休息還有 4 個工作時段</span>
+      </div>
     </div>
     <div class="controls">
       <button id="start-btn">開始</button>
