--- a/index.html
+++ b/index.html
@@ -12,102 +12,102 @@
 </head>
 
 <body>
-  <div class="app-container">
+  <div class="app_container">
     <!-- 左欄：計時器主要功能 -->
-    <div class="timer-column">
-      <div class="timer-section">
-        <h1 class="app-title">番茄鐘</h1>
+    <div class="timer_column">
+      <div class="timer_section">
+        <h1 class="app_title">番茄鐘</h1>
         <div class="timer">
-          <span id="time-display">25:00</span>
-          <div class="sessions-info">
-            <span id="sessions-count">距離長休息還有 4 個工作時段</span>
+          <span id="time_display">25:00</span>
+          <div class="sessions_info">
+            <span id="sessions_count">距離長休息還有 4 個工作時段</span>
           </div>
         </div>
         <div class="controls">
-          <button id="start-btn">開始</button>
-          <button id="pause-btn">暫停</button>
-          <button id="reset-btn">重設</button>
+          <button id="start_btn">開始</button>
+          <button id="pause_btn">暫停</button>
+          <button id="reset_btn">重設</button>
         </div>
         <div class="cycles">
-          <p>完成週期: <span id="cycle-count">0</span></p>
+          <p>完成週期: <span id="cycle_count">0</span></p>
         </div>
       </div>
     </div>
 
     <!-- 右欄：功能區域 -->
-    <div class="features-column">
-      <div class="keyboard-shortcuts">
+    <div class="features_column">
+      <div class="keyboard_shortcuts">
         <h3>快捷鍵</h3>
-        <div class="shortcuts-grid">
-          <div class="shortcut-item">
+        <div class="shortcuts_grid">
+          <div class="shortcut_item">
             <kbd>空格</kbd> 開始/暫停
           </div>
-          <div class="shortcut-item">
+          <div class="shortcut_item">
             <kbd>R</kbd> 重置
           </div>
-          <div class="shortcut-item">
+          <div class="shortcut_item">
             <kbd>1-9</kbd> 快速開始任務
           </div>
-          <div class="shortcut-item">
+          <div class="shortcut_item">
             <kbd>Enter</kbd> 新增待辦事項
           </div>
         </div>
       </div>
 
-      <div class="settings-section">
+      <div class="settings_section">
         <h2>時間設定</h2>
-        <div class="settings-grid">
-          <div class="setting-item">
+        <div class="settings_grid">
+          <div class="setting_item">
             <label for="work-time">工作時間 (分鐘)</label>
-            <input type="number" id="work-time" min="1" max="60" value="25">
+            <input type="number" id="work_time" min="1" max="60" value="25">
           </div>
-          <div class="setting-item">
+          <div class="setting_item">
             <label for="break-time">短休息 (分鐘)</label>
-            <input type="number" id="break-time" min="1" max="30" value="5">
+            <input type="number" id="break_time" min="1" max="30" value="5">
           </div>
-          <div class="setting-item">
+          <div class="setting_item">
             <label for="long-break-time">長休息 (分鐘)</label>
-            <input type="number" id="long-break-time" min="1" max="60" value="15">
+            <input type="number" id="long_break_time" min="1" max="60" value="15">
           </div>
-          <div class="setting-item">
+          <div class="setting_item">
             <label for="sessions-before-long-break">長休息前工作時段</label>
-            <input type="number" id="sessions-before-long-break" min="2" max="10" value="4">
+            <input type="number" id="sessions_before_long_break" min="2" max="10" value="4">
           </div>
         </div>
-        <button id="save-settings">保存設定</button>
-        <button id="reset-settings">重置為預設值</button>
+        <button id="save_settings">保存設定</button>
+        <button id="reset_settings">重置為預設值</button>
       </div>
 
-      <div class="todo-section">
+      <div class="todo_section">
         <h2>待辦事項</h2>
-        <div class="todo-input">
-          <input type="text" id="todo-input" placeholder="輸入待辦事項...">
-          <button id="add-todo">新增</button>
+        <div class="todo_input">
+          <input type="text" id="todo_input" placeholder="輸入待辦事項...">
+          <button id="add_todo">新增</button>
         </div>
-        <ul id="todo-list"></ul>
+        <ul id="todo_list"></ul>
       </div>
 
-      <div class="stats-section">
+      <div class="stats_section">
         <h2>統計分析</h2>
-        <div class="stats-controls">
-          <button id="daily-stats">每日統計</button>
-          <button id="weekly-stats">每週統計</button>
+        <div class="stats_controls">
+          <button id="daily_stats">每日統計</button>
+          <button id="weekly_stats">每週統計</button>
         </div>
-        <div class="stats-display">
+        <div class="stats_display">
           <canvas id="statsChart"></canvas>
         </div>
-        <div class="stats-summary">
-          <div class="stat-item">
+        <div class="stats_summary">
+          <div class="stat_item">
             <h3>今日完成週期</h3>
-            <span id="today-cycles">0</span>
+            <span id="today_cycles">0</span>
           </div>
-          <div class="stat-item">
+          <div class="stat_item">
             <h3>本週完成週期</h3>
-            <span id="week-cycles">0</span>
+            <span id="week_cycles">0</span>
           </div>
-          <div class="stat-item">
+          <div class="stat_item">
             <h3>最長專注時間</h3>
-            <span id="max-focus-time">0 分鐘</span>
+            <span id="max_focus_time">0 分鐘</span>
           </div>
         </div>
       </div>
